--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "webpack": "^5.28.0"
   },
   "dependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/polyfill": "^7.12.1",
     "posthtml-render": "^1.3.1",
     "postsvg": "^2.2.7",
