--- a/themes/vue-october/theme.yaml
+++ b/themes/vue-october/theme.yaml
@@ -2,4 +2,5 @@ name: 'Vue October'
 description: 'Vue october start theme'
 author: acme
 homepage: 'https://github.com/groplanda/vue-october'
+form: 'config/fields.yaml'
 code: ''
