--- a/plugins/acme/settings/updates/version.yaml
+++ b/plugins/acme/settings/updates/version.yaml
@@ -24,3 +24,6 @@
 1.0.9:
     - 'Updated table acme_settings_request'
     - builder_table_update_acme_settings_request.php
+1.0.10:
+    - 'Created table acme_settings_stocks'
+    - builder_table_create_acme_settings_stocks.php
