--- a/plugins/acme/shop/updates/version.yaml
+++ b/plugins/acme/shop/updates/version.yaml
@@ -36,3 +36,12 @@
 1.0.13:
     - 'Updated table acme_shop_categories'
     - builder_table_update_acme_shop_categories_4.php
+1.0.14:
+    - 'Created table acme_shop_comment'
+    - builder_table_create_acme_shop_comment.php
+1.0.15:
+    - 'Updated table acme_shop_product'
+    - builder_table_update_acme_shop_product_2.php
+1.0.16:
+    - 'Updated table acme_shop_comment'
+    - builder_table_update_acme_shop_comment.php
