packer: add yandex kassa

--- a/plugins/acme/shop/updates/version.yaml
+++ b/plugins/acme/shop/updates/version.yaml
@@ -45,3 +45,6 @@
 1.0.16:
     - 'Updated table acme_shop_comment'
     - builder_table_update_acme_shop_comment.php
+1.0.17:
+    - 'Updated table acme_shop_orders'
+    - builder_table_update_acme_shop_orders_2.php
