--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "october/system": "1.1.*",
         "october/backend": "1.1.*",
         "october/cms": "1.1.*",
-        "laravel/framework": "~6.0"
+        "laravel/framework": "~6.0",
+        "yoomoney/yookassa-sdk-php": "^2.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.4|^9.3.3",
