--- a/plugins/acme/shop/models/order/fields.yaml
+++ b/plugins/acme/shop/models/order/fields.yaml
@@ -48,6 +48,15 @@ tabs:
             span: full
             type: textarea
             tab: Заказчик
+        user_payment:
+            label: 'Способ оплаты'
+            options:
+                - 'При доставке'
+                - 'Яндекс касса'
+            showSearch: true
+            span: auto
+            type: dropdown
+            tab: Заказчик
         products:
             label: Товары
             prompt: Добавить
