--- a/plugins/acme/settings/updates/version.yaml
+++ b/plugins/acme/settings/updates/version.yaml
@@ -27,3 +27,6 @@
 1.0.10:
     - 'Created table acme_settings_stocks'
     - builder_table_create_acme_settings_stocks.php
+1.0.11:
+    - 'Created table acme_settings_promo'
+    - builder_table_create_acme_settings_promo.php
