--- a/themes/vue-october/assets/mix-manifest.json
+++ b/themes/vue-october/assets/mix-manifest.json
@@ -1,4 +1,5 @@
 {
-    "/dist/app.js": "/dist/app.js?id=a2c5e96c2b84f2b01f13",
-    "/dist/index.css": "/dist/index.css?id=bf125db146c5e43e12f7"
+    "/dist/app.js": "/dist/app.js?id=74deac2a77843fae497ab61fd8b6fa3f",
+    "/dist/index.js": "/dist/index.js?id=31affe28c231ade7cf0b5b192555d887",
+    "/dist/index.css": "/dist/index.css?id=faf33bb27971edcd3fbf26c94b720a33"
 }
